peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/Dealer_Surveillance__c.object-meta.xml
<CustomObject>
    <label>Dealer Surveillance</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Dealer Surveillance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Surveillances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>