peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Surveillances</relationshipLabel>
    <relationshipName>Dealer_Surveillances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>