peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Actual_Vs_Projected_Loss__c.field-meta.xml
<CustomField>
    <fullName>Actual_Vs_Projected_Loss__c</fullName>
    <label>Actual Vs Projected Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>