peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Additional_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Review_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Review Comments</label>
    <type>TextArea</type>
</CustomField>