peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Approval_Rate__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rate__c</fullName>
    <label>Approval Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>