peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dealer_Surveillances</relationshipName>
    <type>Lookup</type>
</CustomField>