peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Completed_By_Auto_Process__c.field-meta.xml
<CustomField>
    <fullName>Completed_By_Auto_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for SAL-3077 to avoid validation rules when automated process is updating Status to completed.</description>
    <label>Completed By Auto Process</label>
    <type>Checkbox</type>
</CustomField>