peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Created_via_Batch__c.field-meta.xml
<CustomField>
    <fullName>Created_via_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created via Batch</label>
    <type>Checkbox</type>
</CustomField>