peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Credit_Profile_Update__c.field-meta.xml
<CustomField>
    <fullName>Credit_Profile_Update__c</fullName>
    <label>Credit Profile Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credit_Profile</valueSetName>
    </valueSet>
</CustomField>