peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Date_Dealer_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Dealer_Approved__c</fullName>
    <formula>Account__r.Date_Dealer_Approved_Orig__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Dealer Approved - Orig</label>
    <type>Date</type>
</CustomField>