peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Dealer_Status__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Status__c</fullName>
    <formula>TEXT(Account__r.Account_Dealer_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Status</label>
    <type>Text</type>
</CustomField>