peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Dealer_Surveillance__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Surveillance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Surveillance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>