peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Incomplete_Code__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Code__c</fullName>
    <formula>IF (TEXT(Status__c) != &apos;Completed&apos;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incomplete Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>