peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Loaded_via_bulk__c.field-meta.xml
<CustomField>
    <fullName>Loaded_via_bulk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loaded via bulk</label>
    <type>Checkbox</type>
</CustomField>