peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Model_Hit__c.field-meta.xml
<CustomField>
    <fullName>Model_Hit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Hit</label>
    <referenceTo>Dealer_Surveillance_Model__c</referenceTo>
    <relationshipLabel>Dealer Surveillances</relationshipLabel>
    <relationshipName>Dealer_Surveillances</relationshipName>
    <type>Lookup</type>
</CustomField>