peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Net_Investment__c.field-meta.xml
<CustomField>
    <fullName>Net_Investment__c</fullName>
    <formula>Account__r.Net_Investment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>