peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Next_Scheduled_Review__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Scheduled Review</label>
    <type>Date</type>
</CustomField>