peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Action</valueSetName>
    </valueSet>
</CustomField>