peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Recommended_Next_Review__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Next_Review__c</fullName>
    <label>Recommended Next Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Next_Review</valueSetName>
    </valueSet>
</CustomField>