peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Reputational_Search__c.field-meta.xml
<CustomField>
    <fullName>Reputational_Search__c</fullName>
    <label>Reputational Search</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credit_Profile</valueSetName>
    </valueSet>
</CustomField>