peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Review_Type</valueSetName>
    </valueSet>
</CustomField>