peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Risk_Adjusted_Return__c.field-meta.xml
<CustomField>
    <fullName>Risk_Adjusted_Return__c</fullName>
    <description>Added per SAL-2923</description>
    <formula>Account__r.Risk_Adjust_Return__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Adjusted Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>