peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Total_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Past_Due__c</fullName>
    <label>Total Past Due %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>