peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/Waiting_To_Be_Sent_To_Bridgeware__c.field-meta.xml
<CustomField>
    <fullName>Waiting_To_Be_Sent_To_Bridgeware__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting To Be Sent To Bridgeware</label>
    <type>Checkbox</type>
</CustomField>