peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/X24_mos_Act_Vs_Proj_C_O__c.field-meta.xml
<CustomField>
    <fullName>X24_mos_Act_Vs_Proj_C_O__c</fullName>
    <label>24 mos. Act. Vs Proj. C/O</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>