peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/fields/X61_Day_Delin__c.field-meta.xml
<CustomField>
    <fullName>X61_Day_Delin__c</fullName>
    <label>61 Day Delin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>