peac_dev/force-app/main/default/objects/Dealer_Surveillance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Model_Hit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>